# Brazil-Soybean-Forecast

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dvc.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run_improvements.py
.github/workflows/: ci.yml
app/: dashboard.py
configs/: climate.yaml  features.yaml  geo.yaml  model.yaml  ndvi.yaml  soil.yaml  split.yaml  target.yaml
data/processed/: municipalities.parquet  ndvi_safra.parquet  oni_enso.parquet  soil_properties.parquet  target_soja.parquet
docs/: data_dictionary.md  melhoria_soilgrids.txt
models/: model_v1_metadata.json
models/ensemble_regional/outros/: lightgbm.pkl  xgboost.pkl
models/ensemble_regional/sul/: ensemble_meta.pkl  lightgbm.pkl  xgboost.pkl
results/: baselines.json  conformal_result.json  drift_report.md  evaluation_report.md  evaluation_results.json  explainability_report.md  explainability_results.json  feature_importance.csv  improvement_results.json  predictions_2024_2025.parquet  predictions_metadata.json  quantile_training_result.json  regional_training_result.json  risk_analysis_2024_2025.parquet  test_predictions.parquet  training_result.json
scripts/: prepare_demo.py
src/business/: __init__.py  risk_translator.py
src/evaluation/: evaluate.py  explainability.py  metrics.py
src/features/: build_features.py
src/inference/: predict.py
src/ingest/: climate_power.py  climate_update.py  enso.py  municipalities.py  ndvi.py  ndvi_gee.py  pam.py  soilgrids.py
src/modeling/: baselines.py  ensemble.py  split.py  train.py  train_conformal.py  train_quantile.py  train_regional.py
src/monitoring/: __init__.py  drift_analysis.py
src/validation/: climate.py  geo.py  target.py
tests/: __init__.py  test_climate_validation.py  test_geo_validation.py  test_structure.py  test_target_validation.py
